feat: added a controller for adding tea to favorites
